# Multi-Agent-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.pt-BR.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  db.py  main.py  models.py  schemas.py
app/agents/: __init__.py  base.py  planner.py  research.py  reviewer.py
app/api/routes/: tasks.py
app/services/: __init__.py  orchestrator.py  tasks.py
tests/: test_tasks.py
